--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,23 +8,45 @@
 </head>
 <body>
 
+<!-- ~~~~~~~~~~~~~~~~~~~~~~ Page Header Begin ~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
   <header>
     <div class="col-xs-3">
-       <div class="circle"> <br /> You know<br /> you need <br /> to code </div> </div>
+       <div class="circle"> <br /> You know<br /> you need <br /> Yiddish </div> </div>
      <div class="col-xs-4 slogan">
-      Splurting out unsolicited advice about entrepreneurship since 2014
+      Splurting out unsolicited Yidish Proverbs since 5775.
     </div>
      <div class="col-xs-5 links">
-      <%= link_to 'Contribute', '#' %>
+      <%= link_to 'Contribute', '#' %> &nbsp;
       <%= link_to 'About', '#' %>
     </div>
   </header>
 
- <hr />
+<!-- ~~~~~~~~~~~~~~~~~~~~~~ Page Header End ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
+ <hr />
  <br class="clear" />
 
-<%= yield %>
+<!-- ~~~~~~~~~~~~~~~~~~~~~~ Page Body Begin ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
+  <div class="container">
+    <%= yield %>
+  </div> 
+
+<!-- ~~~~~~~~~~~~~~~~~~~~~~ Page Body End  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+
+<!-- ~~~~~~~~~~~~~~~~~~~~~~ Page Footer Begin ~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+
+  <div class="footer"> 
+    <div class="container">
+      <div class="col-xs-6"> 
+          <%= link_to "This isn't enough, I need more >>", "#", :class => 'next-quote' %> 
+      </div> 
+       <div class="col-xs-6 footer-blurb">
+        Proudly hacked in Valdosta Georgia by Al Dunbar
+      </div>
+    </div>
+  </div>
+
+<!-- ~~~~~~~~~~~~~~~~~~~~~~ Page Footer End ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 </body>
 </html>
