--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,15 @@
 <!-- ~~~~~~~~~~~~~~~~~~~~~~ Page Header Begin ~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
   <header>
     <div class="col-xs-3">
-       <div class="circle"> <br /> You know<br /> you need <br /> Yiddish </div> </div>
+        <%= link_to root_path, :class => 'logo' do %>
+       <div class="circle"> <br /> You know<br /> you need <br /> Yiddish </div> 
+       <% end %>
+    </div>
      <div class="col-xs-4 slogan">
       Splurting out unsolicited Yidish Proverbs since 5775.
     </div>
      <div class="col-xs-5 links">
-      <%= link_to 'Contribute', '#' %> &nbsp;
+       <%= link_to 'Contribute', new_quote_path %> &nbsp;
       <%= link_to 'About', '#' %>
     </div>
   </header>
@@ -39,7 +42,7 @@
   <div class="footer"> 
     <div class="container">
       <div class="col-xs-6"> 
-          <%= link_to "This isn't enough, I need more >>", "#", :class => 'next-quote' %> 
+          <%= link_to "This isn't enough, I need more >>", root_path, :class => 'next-quote' %> 
       </div> 
        <div class="col-xs-6 footer-blurb">
         Proudly hacked in Valdosta Georgia by Al Dunbar
