--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     </div>
      <div class="col-xs-5 links">
        <%= link_to 'Contribute', new_quote_path %> &nbsp;
-      <%= link_to 'About', '#' %>
+       <%= link_to 'About', about_path %>
     </div>
   </header>
 
