--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -18,19 +19,15 @@
      <div class="col-xs-4 slogan">
       Splurting out unsolicited Yidish Proverbs since 5775.
     </div>
-     <div class="col-xs-5 links">
+     <div class="col-xs-8 col-xs-offset-1 col-sm-offset-0 col-sm-5 links">
              <!-- Button trigger modal -->
-       <%= link_to 'Contribute', '#', :data => {:toggle => 'modal', :target => '#myModal'} %>&nbsp;
+       <%= link_to 'Contribute', '#', :data => {:toggle => 'modal', :target => '#myModal'} %>
+       &nbsp;&nbsp;
        <%= link_to 'About', about_path %>
     </div>
   </header>
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~ Page Header End ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-
-    <!-- Button trigger modal -->
-  <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-    Launch demo modal
-  </button>
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -43,8 +40,9 @@
         <div class="modal-body">
         <%= simple_form_for Quote.new do |f| %>
           <div class="modal-body">
-            <%= f.input :saying %>
-            <%= f.input :author %>
+            <%= f.input :saying, :label => "What is the saying you want to add?", :placeholder => "A wise man hears one word and understands two." %>
+            <br />
+            <%= f.input :author, :label => "Who is the author of the quote?", :placeholder => 'Stutchkoff, Nahum' %>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
