--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,1 +1,10 @@
 <h1><%= @quote.inspect %></h1>
+
+<h2> <span>Yiddish Proverb/ No. <%= @quote.id %></span> Here's the <u>best Yiddish Proverb</u> you can get! 
+</h2>
+
+<h1><%= @quote.saying %></h1>
+
+<h2 class="pull-right">- <%= @quote.author %></h2>
+
+<br class="clear" /> <br /> <br /> <br />
