Fixed the quote view

--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,7 +1,5 @@
-<h1><%= @quote.inspect %></h1>
-
-<h2> <span>Yiddish Proverb/ No. <%= @quote.id %></span> Here's the <u>best Yiddish Proverb</u> you can get! 
-</h2>
+<h2> <span>Yiddish Proverb/ No. <%= @quote.id %></span></h2> <h3>Here's the <u>best Yiddish Proverb</u> you can get! 
+</h3>
 
 <h1><%= @quote.saying %></h1>
 
