--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,5 +1,5 @@
-<h2> <span>Yiddish Proverb/ No. <%= @quote.id %></span></h2> <h3>Here's the <u>best Yiddish Proverb</u> you can get! 
-</h3>
+<h2> <span>Yiddish Proverb/ No. <%= @quote.unique_tag %></span></h2> 
+<h3>Here's the <u>best Yiddish Proverb</u> you can get!</h3>
 
 <h1><%= @quote.saying %></h1>
 
